Update README and file type icon. Set the layer that contains the bounds specified by WGS84BoundingBox(preferred)/BoundingBox in the metadata. Add opacity control. Fix layer control on mobile phone. Remove coordinates to keep things simple.

--- a/ckanext/geoview/public/css/wmts_preview.css
+++ b/ckanext/geoview/public/css/wmts_preview.css
@@ -36,3 +36,32 @@ html, body {
   overflow: auto;
   max-height: 200px;
 }
+
+.ui-opacity {
+  box-shadow: 0 0 8px rgba(0,0,0,0.4);
+  background: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  left: 13px;
+  top: 70px;
+  height: 200px;
+  width: 22px;
+  border: 1px solid #888;
+  border-radius: 5px;
+  z-index: 1000;
+ }
+
+.ui-opacity .handle {
+  position: absolute;
+  background: #404040;
+  left: 0;
+  top: 20px;
+  width: 22px;
+  height: 10px;
+  border-radius: 1px;
+  cursor: pointer;
+  cursor: ns-resize;
+}
+
+.ui-opacity .handle:hover {
+  background: #303030;
+}
